@@ -4,7 +4,7 @@ Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes - Recommend generic changes 
 
 # VERSION
 
-version 0.002004
+version 0.003000
 
 # DESCRIPTION
 
