@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.002004
+0.003000
+ [Added / runtime requires]
+ - overload
 
 0.002003 2014-08-21T05:45:11Z
  [Added / test requires]
