@@ -1,6 +1,6 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
-0.002004
+0.003000
 
 0.002003 2014-08-21T05:45:11Z
  [Changed / develop suggests]
